src/test/ui/privacy/associated-item-privacy-trait.stderr
error: type `for<'r> fn(&'r priv_trait::Pub) {<priv_trait::Pub as priv_trait::PrivTr>::method}` is private
  --> $DIR/associated-item-privacy-trait.rs:17:21
   |
LL |         let value = <Pub as PrivTr>::method;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `for<'r> fn(&'r priv_trait::Pub) {<priv_trait::Pub as priv_trait::PrivTr>::method}` is private
  --> $DIR/associated-item-privacy-trait.rs:19:9
   |
LL |         value;
   |         ^^^^^
...
LL |     priv_trait::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `for<'r> fn(&'r Self) {<Self as priv_trait::PrivTr>::method}` is private
  --> $DIR/associated-item-privacy-trait.rs:21:13
   |
LL |         Pub.method();
   |             ^^^^^^
...
LL |     priv_trait::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: associated constant `PrivTr::CONST` is private
  --> $DIR/associated-item-privacy-trait.rs:23:9
   |
LL |         <Pub as PrivTr>::CONST;
   |         ^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: associated type `PrivTr::AssocTy` is private
  --> $DIR/associated-item-privacy-trait.rs:25:16
   |
LL |         let _: <Pub as PrivTr>::AssocTy;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-trait.rs:27:34
   |
LL |         pub type InSignatureTy = <Pub as PrivTr>::AssocTy;
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-trait.rs:29:34
   |
LL |         pub trait InSignatureTr: PrivTr {}
   |                                  ^^^^^^
...
LL |     priv_trait::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-trait.rs:31:14
   |
LL |         impl PrivTr for u8 {}
   |              ^^^^^^
...
LL |     priv_trait::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:48:21
   |
LL |         let value = <Pub as PubTr>::method;
   |                     ^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_signature::mac!();
   |     ----------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:50:9
   |
LL |         value;
   |         ^^^^^
...
LL |     priv_signature::mac!();
   |     ----------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:52:13
   |
LL |         Pub.method(loop {});
   |             ^^^^^^
...
LL |     priv_signature::mac!();
   |     ----------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:69:21
   |
LL |         let value = <Pub as PubTr>::method::<Priv>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_substs::mac!();
   |     -------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:71:9
   |
LL |         value;
   |         ^^^^^
...
LL |     priv_substs::mac!();
   |     -------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:73:9
   |
LL |         Pub.method::<Priv>();
   |         ^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_substs::mac!();
   |     -------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:93:21
   |
LL |         let value = <Pub as PubTr>::method;
   |                     ^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:95:9
   |
LL |         value;
   |         ^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:97:21
   |
LL |         let value = <Pub as PubTr<_>>::method;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:99:9
   |
LL |         value;
   |         ^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:101:9
   |
LL |         Pub.method();
   |         ^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:104:21
   |
LL |         let value = <Priv as PubTr<_>>::method;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:106:9
   |
LL |         value;
   |         ^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:108:9
   |
LL |         Priv.method();
   |         ^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:111:9
   |
LL |         <Pub as PubTr>::CONST;
   |         ^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:113:9
   |
LL |         <Pub as PubTr<_>>::CONST;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:115:9
   |
LL |         <Priv as PubTr<_>>::CONST;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:119:30
   |
LL |         let _: <Pub as PubTr<_>>::AssocTy;
   |                              ^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:121:17
   |
LL |         let _: <Priv as PubTr<_>>::AssocTy;
   |                 ^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:124:35
   |
LL |         pub type InSignatureTy1 = <Pub as PubTr>::AssocTy;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:126:35
   |
LL |         pub type InSignatureTy2 = <Priv as PubTr<Pub>>::AssocTy;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:128:14
   |
LL |         impl PubTr for u8 {}
   |              ^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 30 previous errors

